# rvm

./: CMakeLists.txt  LICENSE  README.md  SPEC.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml
docs/: BYTECODE_SPEC.md  CONTRIBUTING.md  SPEC.md  SPECIFICATION.md
examples/: basic.rvm
src/assembler/: README.md  lexer.c  token.c  translator.c
src/assembler/headers/: lexer.h  token.h  translator.h
src/cli/: main.c
src/lib/: buffer.c  dictionary.c  directive.c  heap.c  instruction.c  parse.c  stack.c  symbol_table.c  translator.c  vm.c
src/lib/headers/: buffer.h  dictionary.h  directive.h  heap.h  instruction.h  parse.h  stack.h  symbol_table.h  translator.h  vm.h
src/librvm/: README.md  instruction.c  instruction_buffer.c  vm.c
src/librvm/headers/: instruction.h  instruction_buffer.h  label_map.h  vm.h
src/ras/: ras.c
src/ras/headers/: ras.h
src/rvmcli/: README.md  main.c
